--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,7 +14,7 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>Astro TEST 2</h1>
-    <p>Уже не важно, все работает</p>
+    <h1>Blog</h1>
+    <p>This is where I will post about my journey learning Astro.</p>
   </body>
 </html>
