--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ const identity = {
 const testVar = true;
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const skillColor = "red";
