--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,3 +81,15 @@ html {
         display: none;
       }
   }
+
+  html.dark {
+    background-color: #0d0950;
+    color: #fff;
+  }
+  
+  .dark a {
+    color: #fff;
+  }
+  .dark .tag {
+    background-color: rgb(20, 110, 138);
+  }
