--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,9 @@
 ---
+import { getCollection } from "astro:content";
 import BlogPost from "../components/BlogPost.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-const allPosts = await Astro.glob("../pages/posts/*.md");
+const allPosts = await getCollection("posts");
 
 const pageTitle = "My Astro Learning Blog";
 ---
@@ -13,9 +14,9 @@ const pageTitle = "My Astro Learning Blog";
     {
       allPosts.map((post) => (
         <BlogPost
-          url={post.url}
-          title={post.frontmatter.title}
-          pubdate={post.frontmatter.pubDate.toString().slice(0, 10)}
+          url={`/posts/${post.slug}/`}
+          title={post.data.title}
+          pubDate={post.data.pubDate}
         />
       ))
     }
